Added another model

--- a/Titanic Dataset/TitanicSurvivor.ipynb
+++ b/Titanic Dataset/TitanicSurvivor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b1c11ca",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "09b6e136",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "2c61f735",
    "metadata": {},
    "outputs": [
@@ -35,19 +35,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\793456093.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\793456093.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X['Age'] = X['Age'].fillna(medianAge)\n",
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\793456093.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\793456093.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X['Sex'] = X['Sex'].map({'male': 1, 'female': 0})\n",
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\793456093.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\793456093.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -66,19 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "64a5d6fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
-    "classifier = tree.DecisionTreeClassifier()\n",
-    "classifier = classifier.fit(X, Y)"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "decisionTree_CLF = tree.DecisionTreeClassifier()\n",
+    "decisionTree_CLF = decisionTree_CLF.fit(X, Y)\n",
+    "\n",
+    "randomForest_CLF = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "randomForest_CLF = randomForest_CLF.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "cee0edb6",
    "metadata": {},
    "outputs": [
@@ -86,19 +90,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\398168869.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\161364927.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testX['Age'] = testX['Age'].fillna(medianAge)\n",
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\398168869.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\161364927.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  testX['Sex'] = testX['Sex'].map({'male': 1, 'female': 0})\n",
-      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_16764\\398168869.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ahmra\\AppData\\Local\\Temp\\ipykernel_7248\\161364927.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -114,7 +118,20 @@
     "testX['Sex'] = testX['Sex'].map({'male': 1, 'female': 0})\n",
     "testX['Embarked'] = testX['Embarked'].dropna()\n",
     "testX = pd.get_dummies(testX, columns=['Embarked'])\n",
-    "prediction = classifier.predict(testX)"
+    "predictionDT = decisionTree_CLF.predict(testX)\n",
+    "predictionRF = randomForest_CLF.predict(testX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "55ff8d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testData = pd.read_csv(r'test.csv')\n",
+    "outputDT = pd.DataFrame({'Passenger ID': testData.PassengerId, 'Survival': predictionDT})\n",
+    "outputRF = pd.DataFrame({'Passenger ID': testData.PassengerId, 'Survival': predictionRF})"
    ]
   }
  ],
